--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>New Clock</title>
-    <style>
-        #clock {
-            font-size: 300px;
-            font-weight: bold;
-            text-align: center;
-        }
-        #date {
-            font-size: 200px;
-            font-weight: bold;
-            text-align: center;
-        }
-    </style>
+    <title>Your Website Title</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <h1 style="text-align: center; font-size: 100px;">Current New Kelvin Time is:</h1>
-    <div id="clock"></div>
-    <div id="date"></div>
-    <script src="script.js"></script>
+    <div id="tv-container">
+        <!-- Televisions will go here -->
+    </div>
 </body>
 </html>
